# pmt-sm

./: .gitignore  README.md  app_gradio.py  day2_mfl.py  day3_mse_stylegan2.py  day3_stylegan2_ffhq.py  day3_w_source.npy  day3_w_target.npy  download_stylegan2.py  eval_pmt_sm.py  export_trt.py  faces.csv  gpu_test.py  mt_pairs.txt  pmt_sm_infer_demo.py  pyproject.toml  report.md  requirements.txt  train_amt_pmgen.py  train_pmgen.py  train_pmt_sm.py  train_pmt_sm_fast.py  vit_fpn_face_demo.py
.github/workflows/: ci.yml
docs/: ablation.md  architecture.md
notebooks/: 01_vit_fpn.ipynb
results/: README.md
src/pmt_sm/: __init__.py  train.py
src/pmt_sm/models/: __init__.py
tests/: __init__.py  test_smoke.py
