[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmt-sm"
version = "0.1.0"
description = "Progressive Makeup Transfer via Spatial-Style GAN (ViT-FPN + MFL + StyleGAN2-ADA)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "pillow>=9.0",
    "opencv-python>=4.5",
    "matplotlib>=3.5",
    "tqdm>=4.60",
    "requests>=2.28",
    "gradio>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
eval = ["torchmetrics>=0.11", "lpips>=0.1.4"]

[tool.setuptools.packages.find]
where = ["src"]
